# SmartDormitory

./: .gitignore  README.md
EXE/: light-video.properties
SmartDormitoryQt/: CMakeLists.txt  SmartDormitoryQt.cpp  SmartDormitoryQt.h  SmartDormitoryQt.ui  ico.rc  img.qrc  main.cpp  opencv_camera.hpp
SmartDormitoryVue/: package-lock.json  package.json
SmartDormitoryVue/src/: main.js  settings.js
SmartDormitoryVue/src/components/Breadcrumb/: index.vue
SmartDormitoryVue/src/layout/components/: Navbar.vue
SmartDormitoryVue/src/router/: index.js
SmartDormitoryVue/src/views/ImageDetail/: index.vue
SmartDormitoryVue/src/views/MasterPanel/: index.vue
SmartDormitoryVue/src/views/about/: index.vue
SmartDormitoryVue/src/views/dashboard/: index.vue
SmartDormitoryVue/src/views/login/: index.vue
SmartDormitoryVue/src/views/table/: index.vue
SmartDormitoryVue/src/views/tree/: index.vue
TCP2HTTP/: CMakeLists.txt  HTTPServer.hpp  TCPServer.hpp  mutex.hxx
TCP2VideoC++/: CMakeLists.txt  HTTPServer.hpp  TCPServer.hpp  config.hxx  main.cpp  mjpeg_streamer.hpp
TCPVideo/org/btik/server/util/: ByteUtil.java
TCPVideo/org/btik/server/video/: Main.java  UDP2Main.java  UDPMain.java
TCPVideo/org/btik/server/video/device/iface/: DevChannel.java  HttpConstant.java  VideoChannel.java
TCPVideo/org/btik/server/video/device/tcp/: BioDeviceChannel.java  FrameReceiver.java
TCPVideo/org/btik/server/video/device/udp/: UDPDeviceChannel.java
TCPVideo/org/btik/server/video/device/udp2/bind/: DeviceSnChannelBinder.java
TCPVideo/org/btik/server/video/device/web/: BioHttpVideoServer.java  SoSendTimeoutTicker.java
VirtualCamera/: VirtualCamera.py  test.py
rk3399/: core
rk3399/Tengine-1.3.2/: CONTRIBUTOR.md
rk3399/Tengine-1.3.2/doc/: multi_thread_mssd.md
rk3399/Tengine-1.3.2/executor/operator/arm64/conv/: conv_2d_dw.cpp  conv_2d_fast.cpp
rk3399/Tengine-1.3.2/serializer/caffe/: te_caffe.proto
rk3399/Tengine-1.3.2/wrapper/caffe/: caffe.proto
rk3399/Tengine-1.3.2/wrapper/tensorflow/: status.cc
rk3399/app/app/: CMakeLists.txt  mssd.cpp
rk3399/app/simpleVideoServer/org/btik/server/: VideoServer.java
rk3399/app/simpleVideoServer/org/btik/server/util/: NamePrefixThreadFactory.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/iface/: SoSendCheckTarget.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/task/: AsyncTaskExecutor.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/tcp/: FrameBuffer.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/udp/: BufferPool.java  FrameSegmentBuffer.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/udp2/: BufferPool.java  FrameBuffer.java  NewUDPDeviceChannel.java
rk3399/app/simpleVideoServer/org/btik/server/video/device/web/: MJPEGVideoChannel.java
